# Griddy-v2

./: .env.example  .gitignore  CMakeLists.txt  LICENSES.md  README.md  griddy-licenses.html
App/: GriddyApp.cpp  GriddyAppEngine.cpp  GriddyAppEngine.h  GriddyAppMainComponent.cpp  GriddyAppMainComponent.h  GriddyMidiOut.cpp  GriddyMidiOut.h  GriddySampleLibrary.cpp  GriddySampleLibrary.h  KeyboardDoneHelper.h  KeyboardDoneHelper.mm  XYPad.cpp  XYPad.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Grids/: EuclideanEngine.h  EuclideanTables.h  GridsEngine.cpp  GridsEngine.h  GridsPatternData.h
Source/Modulation/: LFO.h  ModulationMatrix.h
Source/PatternChain/: PatternChain.h
Source/Settings/: SettingsManager.h
Source/UI/: DensitySliderFrame.h  LEDMatrixFrame.h  ResetButtonFrame.h  RotaryKnobFrame.h  SettingsButtonFrame.h  SettingsPanelFrame.h  TempoFrame.h  ToggleFrame.h  TransportButtonFrame.h  XYPadFrame.h
Source/Visage/: JuceVisageBridge.cpp  JuceVisageBridge.h  SettingsMenuHelper.h  SettingsMenuHelper.mm
Tools/DiagnosticKit/.build/: build.db  plugin-tools.yaml
Tools/DiagnosticKit/.build/arm64-apple-macosx/release/: DiagnosticKit  plugin-tools-description.json
Tools/DiagnosticKit/.build/arm64-apple-macosx/release/DiagnosticKit.build/: DiagnosticKit.d  output-file-map.json  sources
Tools/DiagnosticKit/.build/arm64-apple-macosx/release/DiagnosticKit.dSYM/Contents/: Info.plist
Tools/DiagnosticKit/.build/arm64-apple-macosx/release/DiagnosticKit.dSYM/Contents/Resources/DWARF/: DiagnosticKit
Tools/DiagnosticKit/.build/arm64-apple-macosx/release/DiagnosticKit.dSYM/Contents/Resources/Relocations/aarch64/: DiagnosticKit.yml
Tools/DiagnosticKit/.build/arm64-apple-macosx/release/DiagnosticKit.product/: Objects.LinkFileList
Tools/DiagnosticKit/.build/arm64-apple-macosx/release/ModuleCache/11OUGNA4TX3HY/: Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreData-1KHK1L2CYC2N6.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreTransferable-27T896KGHFB3R.pcm  CoreVideo-DBBGB2LXU3HG.pcm  DataDetection-R5W4QHNMPWVH.pcm  DeveloperToolsSupport-3SUCMSK9ZS2JA.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  IOSurface-26455DPS9NDS0.pcm  ImageIO-2ZSF831VT29UB.pcm  MachO-20RPYVQSX341K.pcm  Metal-1GCZV9N85NJOH.pcm  OSLog-218FBXNFJGY61.pcm  ObjectiveC-1G8H182PQX3QE.pcm  OpenGL-H89XJT7GTCP.pcm  QuartzCore-39A8LQKF980J1.pcm  Security-3QCVXOV25KK54.pcm  Spatial-1JZLH83HN83CS.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  SwiftUI-3DCHKT5UWXXCX.pcm  SwiftUICore-86HIVXUC6WOA.pcm  Symbols-3KC1789KJFX94.pcm  UniformTypeIdentifiers-1OLJP4K3PLM48.pcm  XPC-T0ZXCAST7PE3.pcm  _AvailabilityInternal-2YSBQADOLX02V.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_intrinsics-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm  _Builtin_stdatomic-19KE09ZDXQ6Q3.pcm  _Builtin_stdbool-19KE09ZDXQ6Q3.pcm  (+17 more)
Tools/DiagnosticKit/.build/arm64-apple-macosx/release/Modules/: DiagnosticKit.swiftdoc  DiagnosticKit.swiftmodule  DiagnosticKit.swiftsourceinfo
ai/: prompt.md
docs/: ios-visage-plan.md  juce-visage-notes.md  visage-ios-upstream-prs.md
scripts/: build.sh  init_plugin_project.sh
